# memory-leak-detector

./: .gitignore  LICENSE  README.md  README_cn.md  build.gradle  gradle.properties  settings.gradle
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/bytedance/demo/: DemoApp.java  MainActivity.java
demo/src/main/jniLibs/resources/lib/arm64-v8a/: wrap.sh
demo/src/main/res/drawable/: btn_background.xml
demo/src/main/res/layout/: main.xml
demo/src/main/res/values/: styles.xml
gradle/wrapper/: gradle-wrapper.properties
tester/: build.gradle
tester/src/main/: AndroidManifest.xml
tester/src/main/cpp/: CMakeLists.txt
tester/src/main/cpp/jni/: heap.cpp
tester/src/main/java/com/huchao/jni/: Heap.java
